@@ -1,17 +1,15 @@
 package net.megavex.scoreboardlibrary.internal.nms.base;
 
+import java.util.Collection;
+import java.util.Set;
 import net.kyori.adventure.text.format.NamedTextColor;
 import net.megavex.scoreboardlibrary.api.team.enums.CollisionRule;
 import net.megavex.scoreboardlibrary.api.team.enums.NameTagVisibility;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.Collection;
-import java.util.Collections;
-
 public interface ImmutableTeamProperties<T> {
-
   default Collection<String> entries() {
-    return Collections.emptySet();
+    return Set.of();
   }
 
   T displayName();
